--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Todo-list
 
 # connect to DB
-spring.datasource.url=jdbc:postgresql://localhost:5432/todo_db_01
-spring.datasource.username=postgres
-spring.datasource.password=mypassword
+spring.datasource.url=jdbc:postgresql://dpg-cv0joca3esus73amqqbg-a.singapore-postgres.render.com/todo_db_63l4
+spring.datasource.username=nvbac44
+spring.datasource.password=WCK40Tr0DJ0iRKuGt2t2cn82FkBo7p2H
 
 # config hibernate
 spring.jpa.hibernate.ddl-auto=update
